# CMakeResources-Demo

./: CMakeLists.txt  CMakePresets.json  CMakeResources.json  README.md
tests/: CMakeLists.txt  main.t.cc
